APIs/googleapis.com/jobs/v3/python-client/README.md
# openapi-client
Cloud Talent Solution provides the capability to create, read, update, and delete job postings, as well as search jobs based on keywords and filters. 

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v3
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://jobs.googleapis.com
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://jobs.googleapis.com"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

configuration.access_token = os.environ["ACCESS_TOKEN"]

configuration.access_token = os.environ["ACCESS_TOKEN"]


# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.ProjectsApi(api_client)
    parent = 'parent_example' # str | Parent project name.
    xgafv = 'xgafv_example' # str | V1 error format. (optional)
    access_token = 'access_token_example' # str | OAuth access token. (optional)
    alt = 'alt_example' # str | Data format for response. (optional)
    param_callback = 'param_callback_example' # str | JSONP (optional)
    fields = 'fields_example' # str | Selector specifying which fields to include in a partial response. (optional)
    key = 'key_example' # str | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token. (optional)
    oauth_token = 'oauth_token_example' # str | OAuth 2.0 token for the current user. (optional)
    pretty_print = True # bool | Returns response with indentations and line breaks. (optional)
    quota_user = 'quota_user_example' # str | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters. (optional)
    upload_protocol = 'upload_protocol_example' # str | Upload protocol for media (e.g. \"raw\", \"multipart\"). (optional)
    upload_type = 'upload_type_example' # str | Legacy upload protocol for media (e.g. \"media\", \"multipart\"). (optional)
    create_client_event_request = openapi_client.CreateClientEventRequest() # CreateClientEventRequest |  (optional)

    try:
        api_response = api_instance.jobs_projects_client_events_create(parent, xgafv=xgafv, access_token=access_token, alt=alt, param_callback=param_callback, fields=fields, key=key, oauth_token=oauth_token, pretty_print=pretty_print, quota_user=quota_user, upload_protocol=upload_protocol, upload_type=upload_type, create_client_event_request=create_client_event_request)
        print("The response of ProjectsApi->jobs_projects_client_events_create:\n")
        pprint(api_response)
    except ApiException as e:
        print("Exception when calling ProjectsApi->jobs_projects_client_events_create: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://jobs.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ProjectsApi* | [**jobs_projects_client_events_create**](docs/ProjectsApi.md#jobs_projects_client_events_create) | **POST** /v3/{parent}/clientEvents | 
*ProjectsApi* | [**jobs_projects_companies_create**](docs/ProjectsApi.md#jobs_projects_companies_create) | **POST** /v3/{parent}/companies | 
*ProjectsApi* | [**jobs_projects_companies_list**](docs/ProjectsApi.md#jobs_projects_companies_list) | **GET** /v3/{parent}/companies | 
*ProjectsApi* | [**jobs_projects_complete**](docs/ProjectsApi.md#jobs_projects_complete) | **GET** /v3/{name}:complete | 
*ProjectsApi* | [**jobs_projects_jobs_batch_delete**](docs/ProjectsApi.md#jobs_projects_jobs_batch_delete) | **POST** /v3/{parent}/jobs:batchDelete | 
*ProjectsApi* | [**jobs_projects_jobs_create**](docs/ProjectsApi.md#jobs_projects_jobs_create) | **POST** /v3/{parent}/jobs | 
*ProjectsApi* | [**jobs_projects_jobs_delete**](docs/ProjectsApi.md#jobs_projects_jobs_delete) | **DELETE** /v3/{name} | 
*ProjectsApi* | [**jobs_projects_jobs_get**](docs/ProjectsApi.md#jobs_projects_jobs_get) | **GET** /v3/{name} | 
*ProjectsApi* | [**jobs_projects_jobs_list**](docs/ProjectsApi.md#jobs_projects_jobs_list) | **GET** /v3/{parent}/jobs | 
*ProjectsApi* | [**jobs_projects_jobs_patch**](docs/ProjectsApi.md#jobs_projects_jobs_patch) | **PATCH** /v3/{name} | 
*ProjectsApi* | [**jobs_projects_jobs_search**](docs/ProjectsApi.md#jobs_projects_jobs_search) | **POST** /v3/{parent}/jobs:search | 
*ProjectsApi* | [**jobs_projects_jobs_search_for_alert**](docs/ProjectsApi.md#jobs_projects_jobs_search_for_alert) | **POST** /v3/{parent}/jobs:searchForAlert | 


## Documentation For Models

 - [ApplicationInfo](docs/ApplicationInfo.md)
 - [BatchDeleteJobsRequest](docs/BatchDeleteJobsRequest.md)
 - [BucketRange](docs/BucketRange.md)
 - [BucketizedCount](docs/BucketizedCount.md)
 - [ClientEvent](docs/ClientEvent.md)
 - [CommuteFilter](docs/CommuteFilter.md)
 - [CommuteInfo](docs/CommuteInfo.md)
 - [Company](docs/Company.md)
 - [CompanyDerivedInfo](docs/CompanyDerivedInfo.md)
 - [CompensationEntry](docs/CompensationEntry.md)
 - [CompensationFilter](docs/CompensationFilter.md)
 - [CompensationHistogramRequest](docs/CompensationHistogramRequest.md)
 - [CompensationHistogramResult](docs/CompensationHistogramResult.md)
 - [CompensationInfo](docs/CompensationInfo.md)
 - [CompensationRange](docs/CompensationRange.md)
 - [CompleteQueryResponse](docs/CompleteQueryResponse.md)
 - [CompletionResult](docs/CompletionResult.md)
 - [CreateClientEventRequest](docs/CreateClientEventRequest.md)
 - [CreateCompanyRequest](docs/CreateCompanyRequest.md)
 - [CreateJobRequest](docs/CreateJobRequest.md)
 - [CustomAttribute](docs/CustomAttribute.md)
 - [CustomAttributeHistogramRequest](docs/CustomAttributeHistogramRequest.md)
 - [CustomAttributeHistogramResult](docs/CustomAttributeHistogramResult.md)
 - [DeviceInfo](docs/DeviceInfo.md)
 - [HistogramFacets](docs/HistogramFacets.md)
 - [HistogramResult](docs/HistogramResult.md)
 - [HistogramResults](docs/HistogramResults.md)
 - [Job](docs/Job.md)
 - [JobDerivedInfo](docs/JobDerivedInfo.md)
 - [JobEvent](docs/JobEvent.md)
 - [JobQuery](docs/JobQuery.md)
 - [LatLng](docs/LatLng.md)
 - [ListCompaniesResponse](docs/ListCompaniesResponse.md)
 - [ListJobsResponse](docs/ListJobsResponse.md)
 - [Location](docs/Location.md)
 - [LocationFilter](docs/LocationFilter.md)
 - [MatchingJob](docs/MatchingJob.md)
 - [MendelDebugInput](docs/MendelDebugInput.md)
 - [Money](docs/Money.md)
 - [NamespacedDebugInput](docs/NamespacedDebugInput.md)
 - [NumericBucketingOption](docs/NumericBucketingOption.md)
 - [NumericBucketingResult](docs/NumericBucketingResult.md)
 - [PostalAddress](docs/PostalAddress.md)
 - [ProcessingOptions](docs/ProcessingOptions.md)
 - [RequestMetadata](docs/RequestMetadata.md)
 - [ResponseMetadata](docs/ResponseMetadata.md)
 - [SearchJobsRequest](docs/SearchJobsRequest.md)
 - [SearchJobsResponse](docs/SearchJobsResponse.md)
 - [SpellingCorrection](docs/SpellingCorrection.md)
 - [TimeOfDay](docs/TimeOfDay.md)
 - [TimestampRange](docs/TimestampRange.md)
 - [UpdateCompanyRequest](docs/UpdateCompanyRequest.md)
 - [UpdateJobRequest](docs/UpdateJobRequest.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/cloud-platform**: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
 - **https://www.googleapis.com/auth/jobs**: Manage job postings

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/cloud-platform**: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
 - **https://www.googleapis.com/auth/jobs**: Manage job postings


## Author




